# airlayer

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PHILOSOPHY.md  README.md  docker-compose.cube-parity.yml  docker-compose.test.yml  install_airlayer.sh  justfile  pyproject.toml  python-readme.md  wasm-readme.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: analyst.md  builder.md
.claude/skills/analyst/: SKILL.md
.claude/skills/bootstrap/: SKILL.md
.claude/skills/builder/: SKILL.md
.claude/skills/migrate-from-cube/: SKILL.md
.claude/skills/profile/: SKILL.md
.claude/skills/query/: SKILL.md
.github/workflows/: ci.yml  npm.yml  python.yml  release.yaml
bench-vs-cube/: Cargo.toml  README.md  docker-compose.yml
bench-vs-cube/cube_schema/: customers.js  line_items.js  orders.js  products.js
bench-vs-cube/src/: main.rs
benches/: README.md  compilation.rs
benches/views/: customers.view.yml  line_items.view.yml  orders.view.yml  products.view.yml
commands/: compile.md
docs/: agent-execution.md  architecture.md  dialects.md  foreign-models.md  library-usage.md  query-api.md  schema-format.md  testing.md
examples/bigquery/: 01_readings_by_facility.sh  02_sensor_type_breakdown.sh  03_equipment_activity.sh  04_pressure_filter.sh
examples/bigquery/topics/: sensor_analytics.topic.yml
examples/bigquery/views/: sensor_readings.view.yml
examples/bootstrapping/: 01_introspect_schema.sh  02_profile_dimensions.sh  03_compile_query.sh  04_execute_query.sh  README.md
examples/bootstrapping/data/: orders.csv
examples/bootstrapping/views/: orders.view.yml
examples/clickhouse/: 01_shipments_by_channel.sh  02_shipments_by_warehouse.sh  03_completed_vs_returned.sh  04_daily_shipping_by_warehouse.sh  05_weekend_shipping_filter.sh  06_monthly_shipping_summary.sh  07_warehouse_count_by_region.sh  08_json_query.sh
examples/clickhouse/topics/: daily_shipping.topic.yml  warehouse_shipments.topic.yml
examples/clickhouse/views/: shipments.view.yml  shipping_daily.view.yml  warehouses.view.yml
examples/config-yml/: 01_orders_with_config.sh  02_cross_view_join.sh  03_bigquery_events.sh  config.yml
examples/config-yml/views/: customers.view.yml  events.view.yml  orders.view.yml
examples/domo/: 01_views_by_channel.sh  02_engagement_by_type.sh  03_brand_performance.sh  04_custom_measures.sh
examples/domo/views/: content_performance.view.yml
examples/duckdb/: 01_students_by_term.sh  02_department_breakdown.sh  03_ta_and_auditor_counts.sh  04_course_allocation.sh  05_section_summary.sh
examples/duckdb/topics/: enrollment_analytics.topic.yml
examples/duckdb/views/: enrollments.view.yml
examples/foreign-models/cube/: ecommerce.yml
examples/foreign-models/dbt/: ecommerce.yml
examples/foreign-models/lookml/: ecommerce.lkml
examples/foreign-models/omni/: ecommerce.yml
examples/join-hints/: 01_via_warehouse.sh  02_via_store.sh
examples/join-hints/views/: orders.view.yml  shipments.view.yml  stores.view.yml  warehouses.view.yml
examples/measure-refs/: 01_profit_by_category.sh  02_avg_revenue.sh
examples/measure-refs/views/: financials.view.yml
examples/metric-tree/: 01_inspect_tree.sh  02_inspect_subtree.sh  03_inspect_json.sh  04_visualize.sh  05_sensitivity.sh  06_predict.sh  07_explain.sh  README.md  config.yml  metric-tree.html
examples/metric-tree-ecommerce/: 01_inspect_tree.sh  02_sensitivity.sh  03_predict.sh  04_explain.sh  05_visualize.sh
examples/metric-tree-ecommerce/data/: orders.csv  sellers.csv  traffic.csv
examples/metric-tree-ecommerce/views/: orders.view.yml  sellers.view.yml  traffic.view.yml
examples/metric-tree/data/: marketing_events.csv  subscriptions.csv
examples/metric-tree/views/: marketing.view.yml  revenue.view.yml
examples/motifs/: 01_contribution.sh  02_rank.sh  03_percent_of_total.sh  04_anomaly.sh  05_dod.sh  06_wow.sh  07_mom.sh  08_moving_average.sh  09_cumulative.sh  10_trend.sh  11_yoy.sh  12_qoq.sh  13_custom_normalized.sh  14_custom_index.sh  15_custom_rolling_sum.sh  16_custom_concentration.sh  17_custom_peak_valley.sh  18_explicit_measure_param.sh  19_explicit_param_json.sh  20_custom_ratio.sh  21_custom_efficiency.sh  22_discover_motifs.sh  config.yml  views
examples/motifs/data/: daily_sales.csv
examples/motifs/motifs/: concentration.motif.yml  efficiency.motif.yml  index.motif.yml  normalized.motif.yml  (+3 more)
examples/multi-dialect/: 01_postgres.sh  02_mysql.sh  03_bigquery.sh  04_snowflake.sh  05_clickhouse.sh  06_duckdb.sh  07_databricks.sh  08_redshift.sh  09_sqlite.sh  10_domo.sh
examples/queries/: 01_discover_queries.sh  02_compile_query.sh  03_execute_query.sh
examples/rolling-windows/: 01_cumulative_revenue.sh  02_rolling_7day.sh
examples/segments/: 01_active_users_by_plan.sh  02_us_premium_users.sh
examples/sequences/: 01_discover_sequences.sh  02_compile_sequence.sh  03_execute_sequence.sh  config.yml  data  views
examples/shared/: config.yml
examples/snowflake/: 01_revenue_by_market.sh  02_manager_performance.sh  03_campaign_channel_attribution.sh  04_new_vs_existing.sh  05_plan_tier_breakdown.sh  06_premium_subscriptions.sh  07_monthly_trend.sh  08_team_lead_rollup.sh
examples/subquery-dims/: 01_customers_with_order_count.sh
scripts/: test-db-up.sh
skills/inspect/: SKILL.md
skills/query/: SKILL.md
skills/validate/: SKILL.md
src/: lib.rs  main.rs  python.rs  wasm.rs
src/cli/: bootstrap.rs  mod.rs  prompts.rs
src/dialect/: mod.rs  templates.rs
src/engine/: catalog.rs  error.rs  evaluator.rs  join_graph.rs  member_sql.rs  metric_tree.rs  metric_tree_ops.rs  mod.rs  motifs.rs  profiler.rs  query.rs  sql_generator.rs
src/executor/: bigquery.rs  clickhouse.rs  databricks.rs  domo.rs  duckdb.rs  introspect.rs  mod.rs  motherduck.rs  mysql.rs  postgres.rs  presto.rs  snowflake.rs  sqlite.rs
src/schema/: globals.rs  mod.rs  models.rs  parser.rs  validator.rs
tests/: README.md  cube_parity_tests.rs  ecommerce_parity_tests.rs  integration_tests.rs
tests/integration/: config-bigquery.yml  config-duckdb.yml
(+44 files in other folders)
