[package]
name = "airlayer"
version = "0.1.0"
edition = "2021"
description = "airlayer — in-process semantic engine for SQL generation from .view.yml definitions"
license = "Apache-2.0"

[[bin]]
name = "airlayer"
path = "src/main.rs"

[lib]
name = "airlayer"
path = "src/lib.rs"

[features]
default = []
exec-postgres = ["dep:postgres", "dep:rust_decimal"]
exec-mysql = ["dep:mysql"]
exec-snowflake = ["dep:ureq"]
exec-bigquery = ["dep:ureq"]
exec-clickhouse = ["dep:ureq"]
exec-databricks = ["dep:ureq"]
exec-duckdb = ["dep:duckdb"]
exec-sqlite = ["dep:rusqlite"]
exec-domo = ["dep:ureq"]
exec-motherduck = ["dep:duckdb", "exec-duckdb"]
exec = ["exec-postgres", "exec-mysql", "exec-snowflake", "exec-bigquery", "exec-clickhouse", "exec-databricks", "exec-duckdb", "exec-sqlite", "exec-domo", "exec-motherduck"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
minijinja = { version = "1", features = ["json", "loader"] }
chrono = "0.4"
chrono-tz = "0.8"
regex = "1.3"
itertools = "0.10"
convert_case = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
glob = "0.3"
postgres = { version = "0.19", optional = true, features = ["with-chrono-0_4"] }
rust_decimal = { version = "1", optional = true, features = ["db-postgres"] }
mysql = { version = "25", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
duckdb = { version = "1", features = ["bundled"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[[bench]]
name = "compilation"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"
insta = { version = "1.34", features = ["yaml"] }
pretty_assertions = "1.4"
tempfile = "3.10"
rusqlite = { version = "0.31", features = ["bundled"] }
mysql = "25"
# Integration tests need these drivers directly (not via executor module)
duckdb = { version = "1", features = ["bundled"] }
postgres = { version = "0.19" }
ureq = { version = "2", features = ["json"] }

[lints.clippy]
too-many-arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
