[package]
name = "airlayer"
version = "0.0.5"
edition = "2021"
description = "airlayer — in-process semantic engine for SQL generation from .view.yml definitions"
license = "Apache-2.0"

[[bin]]
name = "airlayer"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "airlayer"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:console", "dep:dialoguer", "dep:indicatif", "dep:libc", "dep:glob"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "chrono/wasmbind"]
python = ["dep:pyo3"]
exec-postgres = ["dep:postgres", "dep:rust_decimal"]
exec-mysql = ["dep:mysql"]
exec-snowflake = ["dep:ureq"]
exec-bigquery = ["dep:ureq"]
exec-clickhouse = ["dep:ureq"]
exec-databricks = ["dep:ureq"]
exec-duckdb = ["dep:duckdb"]
exec-sqlite = ["dep:rusqlite"]
exec-domo = ["dep:ureq"]
exec-motherduck = ["dep:duckdb", "exec-duckdb"]
exec = ["exec-postgres", "exec-mysql", "exec-snowflake", "exec-bigquery", "exec-clickhouse", "exec-databricks", "exec-duckdb", "exec-sqlite", "exec-domo", "exec-motherduck"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
minijinja = { version = "1", features = ["json", "loader"] }
chrono = "0.4"
chrono-tz = "0.8"
regex = "1.3"
itertools = "0.10"
convert_case = "0.7"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
glob = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
console = { version = "0.15", optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
postgres = { version = "0.19", optional = true, features = ["with-chrono-0_4"] }
rust_decimal = { version = "1", optional = true, features = ["db-postgres"] }
mysql = { version = "28", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
duckdb = { version = "1", features = ["bundled"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[[bench]]
name = "compilation"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"
insta = { version = "1.34", features = ["yaml"] }
pretty_assertions = "1.4"
tempfile = "3.10"
rusqlite = { version = "0.31", features = ["bundled"] }
mysql = "28"
# Integration tests need these drivers directly (not via executor module)
duckdb = { version = "1", features = ["bundled"] }
postgres = { version = "0.19" }
ureq = { version = "2", features = ["json"] }

# Optimized for WASM size; also applies to native release builds
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[lints.clippy]
too-many-arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
